# mod-iaplayerbot

./: CMakeLists.txt  README.md  test.txt
conf/: iaplayerbot.conf.dist
sql/auth/: 01_iabot_account.sql
sql/characters/: 02_iabot_characters.sql
sql/world/: 03_iabot_world_tables.sql
src/: IABotDefines.h  IABotModule.cpp
src/Config/: IABotConfig.cpp  IABotConfig.h
src/Hooks/: IABot_CommandScript.cpp  IABot_CommandScript.h  IABot_PlayerScript.cpp  IABot_PlayerScript.h  IABot_UnitScript.cpp  IABot_UnitScript.h  IABot_WorldScript.cpp  IABot_WorldScript.h
src/Manager/: IABotLoginMgr.cpp  IABotLoginMgr.h  IABotManager.cpp  IABotManager.h  IABotSession.cpp  IABotSession.h
src/Scheduler/: IABotMetrics.cpp  IABotMetrics.h  IABotScheduler.cpp  IABotScheduler.h
